<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_top_margin">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_top_margin">

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:contentDescription="@string/share_the_play_desc"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:drawableStart="@android:drawable/ic_menu_share"
            android:gravity="center"
            android:text="@string/share_text" />
    </FrameLayout>

</LinearLayout>