<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_crest"
            android:layout_width="@dimen/crest_image_size"
            android:layout_height="@dimen/crest_image_size"
            android:layout_gravity="center"
            android:contentDescription="@string/home_team_crest_desc" />

        <TextView
            android:id="@+id/home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/test_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/data_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/away_crest"
            android:layout_width="@dimen/crest_image_size"
            android:layout_height="@dimen/crest_image_size"
            android:layout_gravity="center"
            android:contentDescription="@string/away_team_crest_desc" />

        <TextView
            android:id="@+id/away_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/test_text"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>

