<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/home_crest"
                    android:contentDescription="@string/home_team_crest_desc"
                    android:layout_width="@dimen/crest_image_size"
                    android:layout_height="@dimen/crest_image_size"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/home_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textSize="@dimen/TeamNames" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textSize="@dimen/Score" />

                <TextView
                    android:id="@+id/data_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/test_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/away_crest"
                    android:layout_width="@dimen/crest_image_size"
                    android:layout_height="@dimen/crest_image_size"
                    android:contentDescription="@string/away_team_crest_desc"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/away_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textSize="@dimen/TeamNames" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/details" />

    </LinearLayout>
</android.support.v7.widget.CardView>


